--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
-      name="Media Pilot "
+      name="Media Pilot"
       content="A media marketing tool that allows you to have full control of you online presence"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
@@ -24,7 +24,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Media Pilot</title>
+    <title>Media Pilot 2</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
